--- a/testdata/collection/mapOf.spec.yaml
+++ b/testdata/collection/mapOf.spec.yaml
@@ -1,47 +1,40 @@
-box: base
 content:
   - name: _mapOf basic
     expression: '_mapOf: { string: int }'
     content:
-      - input: { outcome: 'accept' }
-        content:
-          - name: accept dict with one matching-matching entry
-            input: { text: '{ va: 0 }' }
-          - name: accept dict with several matching-matching entries
-            input: { text: '{ va: 0, vb: 1, vc: 2 }' }
-          - name: accept the empty dict
-            input: { text: '{}' }
-      - input: { outcome: 'reject' }
-        content:
-          - name: reject dict with non-matching keys
-            content:
-              - input: { text: '{ 0.1: 9 }' }
-              - input: { text: '{ 2: 9 }' }
-              - input: { text: '{ []: 9 }' }
-              - input: { text: '{ true: 9 }' }
-              - input: { text: '{ {}: 9 }' }
-          - name: reject dict with non-matching values
-            content:
-              - input: { text: '{ va: 0.1 }' }
-              - input: { text: '{ va: 2020-06-17T10:13:46 }' }
-              - input: { text: '{ va: [] }' }
-              - input: { text: '{ va: true }' }
-              - input: { text: '{ va: vz }' }
-              - input: { text: '{ va }' }
-          - name: reject non-dict
-            content:
-              - input: { text: '0' }
-              - input: { text: '[]' }
-              - input: { text: 'a' }
-              - input: { text: 'true' }
+      - name: accept dict with one matching-matching entry
+        text: '{ va: 0 }'
+      - name: accept dict with several matching-matching entries
+        text: '{ va: 0, vb: 1, vc: 2 }'
+      - name: accept the empty dict
+        text: '{}'
+      - name: reject dict with non-matching keys
+        text:
+          - '{ 0.1: 9 }'
+          - '{ 2: 9 }'
+          - '{ []: 9 }'
+          - '{ true: 9 }'
+          - '{ {}: 9 }'
+      - name: reject dict with non-matching values
+        text:
+          - '{ va: 0.1 }'
+          - '{ va: 2020-06-17T10:13:46 }'
+          - '{ va: [] }'
+          - '{ va: true }'
+          - '{ va: vz }'
+          - '{ va }'
+      - name: reject non-dict
+        text:
+          - '0'
+          - '[]'
+          - 'a'
+          - 'true'
   - name: _mapOf more
-    input:
-      expression: '_mapOf: { string: string }'
+    expression: '_mapOf: { string: string }'
     content:
       - name: accept string-string mappings
-        input: { outcome: 'accept' }
-        content:
-          - input: { text: '{ 0k: 0v }' }
-          - input: { text: '{ ka: va }' }
-          - input: { text: '{ ka: va, kb: vb }' }
-          - input: { text: '{ ka: va, kb: vb, 0k: 0v }' }
+        text:
+          - '{ 0k: 0v }'
+          - '{ ka: va }'
+          - '{ ka: va, kb: vb }'
+          - '{ ka: va, kb: vb, 0k: 0v }'
