--- a/testdata/scalar/in.spec.yaml
+++ b/testdata/scalar/in.spec.yaml
@@ -1,22 +1,22 @@
-box: base
 content:
   - name: _in
-    input:
-      expression: '_in: [a, present, b, c]'
+    expression: '_in: [a, present, b, c]'
     content:
-      - input: { outcome: 'accept', text: 'present' }
-      - input: { outcome: 'reject', text: 'missing' }
+      - name: 'accept'
+        text: 'present'
+      - name: 'reject'
+        text: 'missing'
   - name: _in rejects everything when empty
-    input:
-      expression: '_in: []'
-      outcome: 'reject'
+    expression: '_in: []'
     content:
-      - input: { text: '0.2' }
-      - input: { text: '2' }
-      - input: { text: '[]' }
-      - input: { text: '[a]' }
-      - input: { text: 'a' }
-      - input: { text: 'null' }
-      - input: { text: 'true' }
-      - input: { text: '{ k: v }' }
-      - input: { text: '{}' }
+      - name: 'reject'
+        text:
+          - '0.2'
+          - '2'
+          - '[]'
+          - '[a]'
+          - 'a'
+          - 'null'
+          - 'true'
+          - '{ k: v }'
+          - '{}'
