--- a/testdata/yaml/yaml.spec.yaml
+++ b/testdata/yaml/yaml.spec.yaml
@@ -1,33 +1,26 @@
-box: base
 name: validate that the yaml is valid
-input:
-  expression: 'any'
+expression: 'any'
 content:
-  - input: { outcome: 'accept' }
+  - name: 'accept ... this? (what is this!?)'
+    text:
+      - '?'
+      - '??'
+      - '???'
+      - '??_'
+  - name: accept maps with empty values
+    text: 'a:'
+  - name: accept strings, because it sees strings everywhere
+    text:
+      - '0 b 9'
+      - 'a b'
+  - name: reject misuse of tags
+    text:
+      - '!!!aha!'
+      - '!!!eh'
+      - '!!oh'
+  - name: reject the empty document
+    text: ''
+  - name: reject unknown tags
     content:
-      - name: 'accept ... this? (what is this!?)'
-        matrix:
-          text:
-            - '?'
-            - '??'
-            - '???'
-            - '??_'
-      - name: accept maps with empty values
-        input: { text: 'a:' }
-      - name: accept strings, because it sees strings everywhere
-        content:
-          - input: { text: '0 b 9' }
-          - input: { text: 'a b' }
-  - input: { outcome: 'reject' }
-    content:
-      - name: reject misuse of tags
-        content:
-          - input: { text: '!!!aha!' }
-          - input: { text: '!!!eh' }
-          - input: { text: '!!oh' }
-      - name: reject the empty document
-        input: { text: '' }
-      - name: reject unknown tags
-        content:
-          - input: { text: '!!uh _' }
-          - input: { text: '!ih _' }
+      - text: '!!uh _'
+      - text: '!ih _'
